RESOLVED FIXED57107
Pasteboard data's RTF data doesn't always include URLs via NSLinkAttributeName
https://bugs.webkit.org/show_bug.cgi?id=57107
Summary Pasteboard data's RTF data doesn't always include URLs via NSLinkAttributeName
Enrica Casucci
Reported 2011-03-25 11:08:12 PDT
Depending on the range of the selection in a web page, WebKit sometimes doesn't include the URL for the selected text in the RTF representation using NSAttributeString's NSLinkAttributeName. * STEPS TO REPRODUCE 1. Open TextEdit. We'll use this as a simple way of inspecting the NSPasteboard's contents. 2. Open an web page with links: http://www.nytimes.com/2011/03/04/world/africa/04president.html?hp in Safari 3. Right-click on the 'President Obama' link, then hit 'escape' to dismiss the menu. You should have JUST the text 'President Obama' (which is all one link) selected. Copy it and Paste it into TextEdit 4. Notice that your text has the expected style (blueish, underlined), but it does NOT contain the actual link!
Attachments
Patch (2.30 KB, patch)
2011-03-25 11:18 PDT, Enrica Casucci
oliver: review+
Enrica Casucci
Comment 1 2011-03-25 11:16:40 PDT
Enrica Casucci
Comment 2 2011-03-25 11:18:10 PDT
Enrica Casucci
Comment 3 2011-03-25 11:48:36 PDT
Note You need to log in before you can comment on or make changes to this bug.