Pasteboard data's RTF data doesn't always include URLs via NSLinkAttributeName. https://bugs.webkit.org/show_bug.cgi?id=57107 <rdar://problem/9084267>

Reviewed by Oliver Hunt.

If the selection is at the beginning of content inside an anchor tag
we move the selection start to include the anchor.
        
* platform/mac/PasteboardMac.mm:
(WebCore::Pasteboard::writeSelection): Modified to change the selection
start according to the new rule.



git-svn-id: svn://svn.chromium.org/blink/trunk@81974 bbb929c8-8fbe-4397-9dbb-9b2b20218538